# Sandboxer

./: .dput.cf  .gitattributes  .gitignore  .gitmodules  .travis.yml  LICENSE  README.md  build-bwrap.sh  build.sh  bwrap-apparmor-rule  bwrap-apparmor-rule.alt.1  bwrap-apparmor-rule.alt.2  create-debian-source.sh  create-rpm-source.sh  install-sandboxer.sh  install-to-home.sh  install.sh  package-extra-components.sh  sandboxer.spec.template  update_shebang.sh
Examples/: .gitignore  3d-modeling-debian-sandbox.cfg.lua  arduino-debian-sandbox.cfg.lua  blender-debian-sandbox.cfg.lua  browser-debian-sandbox.cfg.lua  cura-debian-sandbox.cfg.lua  debian-add-xpra-repo.sh  debian-minimal-setup.sh  debian-sandbox.cfg.lua  debian-setup.cfg.lua  debian-version-probe.lua.in  download-debian-chroot.sh  download-debian-from-docker-repo.sh  download-debian-jessie-chroot.sh  download-debian-sid-chroot.sh  download-debian-stretch-chroot.sh  download-debian-stretch-i386-chroot.sh  download-image-from-docker-repo.sh  download-opensuse-42.2-chroot.sh  download-opensuse-42.3-chroot.sh  download-opensuse-chroot.sh  download-opensuse-tumbleweed-chroot.sh  download-ubuntu-12.04-chroot.sh  download-ubuntu-14.04-chroot.sh  download-ubuntu-16.04-chroot.sh  download-ubuntu-16.10-chroot.sh  download-ubuntu-17.04-chroot.sh  download-ubuntu-18.04-chroot.sh  download-ubuntu-chroot.sh  dropbox-debian-sandbox.cfg.lua  example.cfg.lua  filezilla-debian-sandbox.cfg.lua  firefox-debian-sandbox.cfg.lua  firefox-host-sandbox.cfg.lua  freecad-debian-sandbox.cfg.lua  google-music-manager-debian-sandbox.cfg.lua  icq-debian-sandbox.cfg.lua  ide-debian-sandbox.cfg.lua  keepassxc-debian-sandbox.cfg.lua  klipper.cfg.lua  (+22 more)
Executor/: .gitignore  CMakeLists.txt  NOTES  TODO  cmd_defs.h  comm_helper.c  comm_helper.h  commander.c  config.h.in  dictionary.c  dictionary.h  executor.c  executor_worker.c  executor_worker.h  hash.c  hash.h  helper_macro.h  logger.c  logger.h  message.c  message.h  new_executor.c  pid_group_holder.c  pid_group_holder.h  pid_list.c  pid_list.h  source-checksum.sh  test.c
Extra/: bw-test.sh
Fixups/: chmod  chown
Packaging/: .dput.cf  .gitignore  create-debian-source.sh  create-rpm-source.sh  deploy-to-launchpad.sh  dpkg_private.enc  dput.config  extract-archive.sh  generate-signkeys.sh  package-extra-components.sh  sandboxer.spec.template  sign.sh
Sandboxer/: .buildpath  .gitignore  .project  NOTES  channel-open.sh.in  dbus-watchdog.sh.in  example.cfg.lua  feature-post-dbus.sh.in  feature-post-x11.sh.in  feature-pre-dbus.sh.in  feature-pre-dbus_system.sh.in  feature-pre-gvfs_fix.sh.in  feature-pre-x11.sh.in  run-profile.sh.in  sandboxer-desktop-file-creator.sh  sandboxer-download-extra.sh  sandboxer-kill.sh  sandboxer-setup-phase-1.sh.in  sandboxer-setup-phase-2.sh.in  sandboxer-stop-all.sh  sandboxer-term.sh  sandboxer.post.lua  sandboxer.pre.lua  sandboxer.service  sandboxer.sh
Sandboxer/features/: feature-pre-gvfs_fix.sh.in
Sandboxer/fixups/: fakeroot-session-starter.sh
Sandboxer/includes/: channel-open.sh.in  dbus-watchdog.sh.in  feature-post-dbus.sh.in  feature-post-gvfs_fix.sh.in  feature-post-x11host.sh.in  feature-post-xpra.sh.in  feature-pre-envfix.sh.in  feature-pre-gvfs_fix.sh.in  feature-pre-pulse.sh.in  feature-pre-resolvconf.sh.in  feature-pre-root-fixups.sh.in  feature-pre-rootfixups.sh.in  feature-pre-x11host.sh.in  feature-pre-xpra.sh.in  find-executor-binaries.bash.in  find-fixups.bash.in  find-lua-helper.bash.in  loadables-helper.bash.in  run-profile.sh.in  sandbox-defines-bwrap.sh.in
Sandboxer/signing/: create-archive.sh  dpkg_keys.enc  generate-signkeys.sh  private.key.enc  public.crt  sign.sh  verify.sh
Sandboxer/tools/: bwrap_launcher.sh  etcgen.sh  features_watchdog.sh  gui_toolkits_conf_copy.sh  host_whitelist_etc_gen.sh  machineidgen.sh  pwdgen.sh  pwdgen_simple.sh  watchdog.sh  xpra_client.sh  xpra_conf_export.sh
X11Util/: .gitattributes  CMakeLists.txt  config.h.in  helper_macro.h  main.c  xshm_test.c
debian/: README  changelog  control  copyright  postinst.ex  postrm.ex  preinst.ex  prerm.ex  rules  sandboxer.service
